FIX: update overflow behavior in latest updates dialog

--- a/src/dashboard/home/latest-updates/index.css
+++ b/src/dashboard/home/latest-updates/index.css
@@ -88,7 +88,6 @@
     .p-datatable-wrapper {
         flex: 1 1 auto;
         overflow: auto;
-        overflow-y: hidden;
         scrollbar-gutter: stable;
     }
 
